...
            android:layout_height="140dp"
            android:src="@drawable/ic_baseline_account_circle_24"
            android:layout_gravity="center|bottom"
            android:padding="20dp"></ImageView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usuario_textImputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="5dp"
            android:hint="@string/user"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
...
            app:boxCornerRadiusBottomEnd="45dp"
            app:boxCornerRadiusTopEnd="45dp"
            app:boxCornerRadiusBottomStart="45dp"
            app:boxCornerRadiusTopStart="45dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/usuario_textInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorOnSecondary"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/contrasena_textImputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            app:boxBackgroundColor="?attr/colorOnPrimary"
            android:hint="@string/pass"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeWidth="2dp"
            app:boxCornerRadiusBottomEnd="45dp"
            app:boxCornerRadiusTopEnd="45dp"
            app:boxCornerRadiusBottomStart="45dp"
            app:boxCornerRadiusTopStart="45dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/contrasena_textInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="?attr/colorOnSecondary"
                />
        </com.google.android.material.textfield.TextInputLayout>
...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/recordar_usuario_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:buttonTint="?attr/colorPrimary"
                        android:text="Recordar mi usuario"
                        android:textAlignment="center"
                        android:textColor="@color/grey" />
                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/ingresar_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:backgroundTint="?attr/colorPrimary"
                    android:textStyle="bold"
                    android:text="Ingresar"
                    android:textColor="?attr/colorOnPrimary"
...
